v7_orchestrator/a_simple_clicker_game_where_you_tap_a_cookie/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: v7-backend-service
  labels:
    app: v7-backend
spec:
  selector:
    app: v7-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
